--- a/index.html
+++ b/index.html
@@ -1,45 +1,53 @@
 <!DOCTYPE html>
 <html lang="id">
   <head>
+    <link rel="icon" href="icon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="icon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="icon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="icon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="icon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="icon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="icon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="icon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+    <link rel="manifest" href="icon/manifest.json">
+    <meta name="msapplication-TileColor" content="#fff">
+    <meta name="msapplication-TileImage" content="icon/icon-144x144.png">
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/alif.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="NaC37hrKjZYnZm0W53o4EgOh6xvcJGVp-MylDxWR_Zo" />
-    <meta
-      name="keywords"
-      content="Alif, alif Bima, Siapa Alif Bima?, Alif, Bima, Alif Bima Pradana, Mahasiswa"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="profile/alifbimapradana.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="Alif, alif Bima, Siapa Alif Bima?, Alif, Bima, Alif Bima Pradana, Mahasiswa" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta
-      name="title"
-      content="Alif Bima Pradana - Fullstack Developer"
-    />
-    <meta
-    name="author" content="Alif Bima Pradana">
-    <meta
-      name="description"
-      content="Selamat datang di website saya! Saya Alif Bima Pradana, atau panggil saja saya 'Alif.' Saya adalah seorang pengembang web dengan berfokus pada bagian belakang aplikasi dan antarmuka pengguna. Temukan lebih banyak tentang karya-karya saya di sini"
+    <title>ALIF BIMA PRADANA</title>
+    <meta name="title" content="ALIF BIMA PRADANA" />
+    <meta name="author" content="Alif Bima Pradana">
+    <meta name="description" content="Selamat datang di website saya! Saya Alif Bima Pradana, atau panggil saja saya 'Alif.' Saya adalah seorang pengembang web dengan berfokus pada bagian belakang aplikasi dan antarmuka pengguna. Temukan lebih banyak tentang karya-karya saya di sini"
     />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Alif Bima Pradana" />
+    <meta property="og:locale" content="id_ID" />
     <meta property="og:url" content="https://alifbima.vercel.app/" />
-    <meta
-      property="og:title"
-      content="Alif Bima Pradana - Fullstack Developer"
-    />
-    <meta
-      property="og:description"
-      content="Selamat datang di website saya! Saya Alif Bima Pradana, atau panggil saja saya 'Alif.' Saya adalah seorang pengembang web dengan berfokus pada bagian belakang aplikasi dan antarmuka pengguna. Temukan lebih banyak tentang karya-karya saya di sini"
-    />
-    <meta property="og:image" content="https://alifbima.vercel.app/alif.png" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="ALIF BIMA PRADANA">
+    <meta property="og:description" content="Selamat datang di website saya! Saya Alif Bima Pradana, atau panggil saja saya 'Alif.' Saya adalah seorang pengembang web dengan berfokus pada bagian belakang aplikasi dan antarmuka pengguna. Temukan lebih banyak tentang karya-karya saya di sini">
+    <meta property="og:image" content="https://alifbima.vercel.app/profile/alifbimapradana.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://alifbima.vercel.app/" />
     <meta
       property="twitter:title"
-      content="Alif Bima Pradana - Fullstack Developer"
+      content="Alif Bima Pradana"
     />
     <meta
       property="twitter:description"
@@ -53,11 +61,12 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta itemprop="name" content="Portfolio">
+    <meta itemprop="name" content="ALIF BIMA PRADANA">
     <meta itemprop="description" content="Selamat datang di website saya! Saya Alif Bima Pradana, atau panggil saja saya 'Alif.' Saya adalah seorang pengembang web dengan berfokus pada bagian belakang aplikasi dan antarmuka pengguna. Temukan lebih banyak tentang karya-karya saya di sini">
-    <meta itemprop="image" content="https://alifbima.vercel.app/alif.png">
+    <meta itemprop="image" content="https://alifbima.vercel.app/profile/alifbimapradana.png">
 
-    <title>Alif Bima Pradana - Fullstack Developer</title>
+    <link rel="canonical" href="https://alifbima.vercel.app/" />
+
   </head>
   <body>
     <div id="root"></div>
