--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
 
     <link rel="canonical" href="https://alifbima.vercel.app/" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YD9W1GDRX2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-YD9W1GDRX2');
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
